# HDC-Robot-Controller

./: .dockerignore  .env.example  .gitignore  ADVANCED_INTELLIGENCE_DOCUMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_GENERATION_6_7_IMPLEMENTATION_REPORT.md  AUTONOMOUS_MASTERY_DOCUMENTATION.md  AUTONOMOUS_SDLC_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_v6.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  Dockerfile.pipeline-guard  Dockerfile.production  FINAL_COMPLETION_REPORT.md  MANIFEST.in  PIPELINE_GUARD_README.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUALITY_REPORT.md  QUALITY_VALIDATION_REPORT.md  README.md  RESEARCH_PUBLICATION_READY.md  TERRAGON_SDLC_AUTONOMOUS_COMPLETION_REPORT_FINAL.md  TERRAGON_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT_FINAL.md  TERRAGON_SDLC_COMPLETION_REPORT_v5.md  TERRAGON_SDLC_v4_AUTONOMOUS_COMPLETION_REPORT.md  TERRAGON_SDLC_v4_COMPLETION_REPORT.md  demo.py  docker-compose.pipeline-guard.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  package.xml  pyproject.toml  pytest.ini  quality_validation_comprehensive.py  quality_validation_report.json  (+8 more)
.github/workflows/: ci.yml  quality-gates.yml
config/: hdc_config.yaml  pipeline_guard.yaml
docs/: ROADMAP.md
docs/adr/: 0001-hdc-computing-paradigm.md  template.md
evolution/: autonomous_learner.py
global/: i18n_manager.py
hdc/: __init__.py  classifier.py  encoder.py  memory.py  vectors.py
hdc_core/include/: associative_memory.hpp  hypervector.hpp  memory.hpp  operations.hpp  spatial_encoder.hpp  visual_encoder.hpp
hdc_core/src/: hypervector.cpp  memory.cpp  operations.cpp
hdc_core/src/cuda/: bind_kernel.cu  bundle_kernel.cu  cuda_operations.cu  similarity_kernel.cu
hdc_core/src/encoding/: spatial_encoder.cpp  visual_encoder.cpp
hdc_core/src/reasoning/: associative_memory.cpp
hdc_robot_controller/: __init__.py  generation_1_implementation.py  generation_2_implementation.py  generation_3_implementation.py  main.py
hdc_robot_controller/advanced_intelligence/: __init__.py  meta_learner.py  multi_modal_fusion.py  neural_hdc_hybrid.py  quantum_hdc.py  symbolic_reasoner.py
hdc_robot_controller/autonomous_mastery/: __init__.py  adaptive_architecture.py  self_modifying_code.py
hdc_robot_controller/core/: __init__.py  adaptive_learning.py  behavior_learner.py  encoding.py  error_handling.py  hypervector.py  logging_system.py  memory.py  operations.py  security.py  sensor_encoder.py  sensor_fusion.py
hdc_robot_controller/cosmic_intelligence/: __init__.py  universal_knowledge_integrator.py
hdc_robot_controller/evolution/: __init__.py  evolutionary_controller.py  genetic_optimizer.py  self_improving_algorithms.py
hdc_robot_controller/meta_evolution/: __init__.py  autonomous_coder.py  evolution_orchestrator.py  generation_architect.py  paradigm_transcender.py
hdc_robot_controller/omni_transcendence/: __init__.py  reality_synthesizer.py  universal_consciousness.py
hdc_robot_controller/optimization/: gpu_acceleration.py  gpu_accelerator.py  performance_optimizer.py
hdc_robot_controller/quantum_core/: __init__.py  quantum_hdc_engine.py
hdc_robot_controller/quantum_transcendence/: __init__.py  multidimensional_intelligence.py  quantum_consciousness_engine.py
hdc_robot_controller/research/: benchmark_suite.py  meta_learning.py  neuromorphic_hdc.py  quantum_hdc.py
hdc_robot_controller/robustness/: advanced_error_recovery.py  advanced_fault_tolerance.py  error_recovery.py  fault_tolerance.py
hdc_robot_controller/scaling/: distributed_coordinator.py  distributed_hdc_processing.py  distributed_processing.py  performance_optimizer.py
hdc_robot_controller/security/: enhanced_security.py  security_framework.py
hdc_robot_controller/singularity/: __init__.py  omni_intelligence_engine.py
hdc_robot_controller/swarm_intelligence/: __init__.py  emergent_coordination.py
hdc_robot_controller/transcendence/: __init__.py  consciousness_engine.py  existential_reasoner.py  meta_cognitive_reasoner.py  reality_interface.py  transcendence_orchestrator.py
hdc_robot_controller/universal/: __init__.py  cosmic_intelligence_network.py
k8s/: hdc-deployment.yaml
launch/: hdc_robot_controller.launch.py
monitoring/: health_monitor.py
optimization/: quantum_acceleration_engine.py
pipeline_guard/: __init__.py  core.py  dashboard.py  detection.py  i18n.py  main.py  monitoring.py  repair.py  security.py
research/: README.md
research/algorithms/: adaptive_hdc.py  quantum_enhanced_hdc.py
research/benchmarks/: comparative_study.py  theoretical_limits_study.py
research/experiments/: real_time_adaptation_framework.py  reproducible_framework.py
research/validation/: statistical_significance_validator.py
robustness/: enterprise_fault_tolerance.py
ros2_nodes/control_node/src/: control_node.cpp  fault_tolerant_controller.hpp
ros2_nodes/learning_node/src/: behavior_learner.hpp  learning_node.cpp
scripts/: benchmark_suite.py  demo_controller.py  production_validator.py  quality_checker.py
self_improving/: adaptive_optimizer.py
src/hdc_robot_controller/: __init__.py
terragon_sdlc/: __init__.py  autonomous_executor.py  global_orchestrator.py  hypothesis_driven_development.py  quality_orchestrator.py  self_improving_orchestrator.py
test/: test_hypervector.cpp  test_operations.cpp
tests/: test_advanced_intelligence.py  test_autonomous_mastery.py  test_comprehensive_coverage.py  test_comprehensive_quality_gates.py  test_generation_10_universal.py  test_generation_11_meta_evolution.py  test_generation_12_omni_transcendence.py  test_generation_6_quantum.py  test_generation_7_swarm.py  test_generation_8_transcendence.py  test_generation_9_singularity.py  test_hdc.py  test_hdc_comprehensive.py  test_hdc_core_minimal.py  test_pipeline_guard.py  test_production_hdc_core.py  test_security_comprehensive.py
validation/: comprehensive_quality_gates.py  cosmic_quality_gates.py  meta_evolution_quality_gates.py  security_validator.py  simplified_quality_gates.py
(+4 files in other folders)
