[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdc-robot-controller"
version = "1.0.0"
description = "Hyperdimensional Computing for Robust Robotic Control"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "numba>=0.56.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "structlog>=23.0.0",
    "psutil>=5.9.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.7.0",
    "scikit-learn>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
ros2 = [
    "rclpy>=3.0.0",
    "sensor-msgs>=4.0.0",
    "geometry-msgs>=4.0.0",
    "std-msgs>=4.0.0",
    "nav-msgs>=4.0.0",
    "tf2-ros>=0.25.0",
]
cuda = [
    "cupy-cuda12x>=12.0.0",
    "numba-cuda>=0.56.0",
]

[project.urls]
Homepage = "https://github.com/danieleschmidt/quantum-inspired-task-planner"
Documentation = "https://hdc-robot-controller.readthedocs.io"
Repository = "https://github.com/danieleschmidt/quantum-inspired-task-planner"
Issues = "https://github.com/danieleschmidt/quantum-inspired-task-planner/issues"

[project.scripts]
hdc-robot-controller = "hdc_robot_controller.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "B", "C", "S", "T", "UP"]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --cov=hdc_robot_controller --cov-report=term-missing"