[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hdc-robot-controller"
version = "0.1.0"
description = "Hyperdimensional Computing library for robot sensor classification"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["numpy>=1.24"]

[project.scripts]
hdc-demo = "demo:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
